test/types/string/sungeun/c_string/multilocale/c_str_on_remote_global_string.good
c_str_on_remote_global_string.chpl:3: error: halt reached - Cannot call :c_ptrConst(c_char):c_string on a remote string
